# cp-tool

./: .gitignore  README.md  cp-tool.py  cpt  cpt-tool.py  flake.nix  main.py  pyproject.toml  pyrightconfig.json  setup.py  shell.nix
.github/workflows/: publish.yml
src/: args.py  commands.py  cp-tool.py  error.py  fileio.py  formatting.py  template.py
src/cptool_py/: UI.py  args.py  commands.py  cp_tool.py  error.py  fileio.py  template.py
