[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cptool-py"
version = "2.0.1"
description = "CLI for creating competitive programming problem files"
readme = "README.md"
authors = [{ name = "Simon Ashton", email = "simon@smntic.dev" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["platformdirs"]
urls = { "Homepage" = "https://github.com/smntic/cp-tool" }

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
]

[tool.setuptools]
package-dir = {"" = "src"}
script-files = ["cpt", "src/cp-tool.py"]

[tool.setuptools.packages.find]
where = ["src"]

